--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.86"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
