--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+diff = "0.1.13"
 log = "0.4.22"
 pretty_assertions = "1.4.0"
 regex = "1.10.5"
