--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 anyhow = "1.0.86"
 clap = { version = "4.5.9", features = ["derive"] }
 diff = "0.1.13"
+glob = "0.3.1"
 log = "0.4.22"
 pretty_assertions = "1.4.0"
 regex = "1.10.5"
+reqwest = { version = "0.12.5", features = ["blocking"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
