--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ regex = "1.10.5"
 reqwest = { version = "0.12.5", features = ["blocking"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
+strum = { version = "0.26.3", features = ["derive"] }
